// Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";

package com.daml.ledger.participant.state.kvutils.store.events;

option java_package = "com.daml.ledger.participant.state.kvutils.store.events";
option java_multiple_files = true;
option csharp_namespace = "Com.Daml.Ledger.Participant.State.KVUtils.Store.Events";

import "com/daml/ledger/configuration/ledger_configuration.proto";

// Configuration entry that records a configuration change.
// Also used in state to look up latest configuration.
// When a configuration exists, only the participant that
// submitted previously can change it.
message DamlConfigurationEntry {
  // The submission from which this configuration originated.
  string submission_id = 1;

  // Submitting participant's id.
  string participant_id = 2;

  // The ledger configuration.
  com.daml.ledger.configuration.LedgerConfiguration configuration = 3;
}
